--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 * {
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-weight: 400;
+    // font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    // font-weight: 400;
     box-sizing: border-box;
     box-shadow: none;
     // scroll-behavior: smooth;
@@ -32,6 +33,70 @@ $font: 1.36rem;
 
 .btnn {
     @include mainBtn
+}
+
+.scrollChange {
+    color: black;
+    &:hover {
+        color: cornflowerblue;
+    }
+}
+
+.Hero_Section {
+    cursor: none;
+    overflow: hidden;
+    .cursor {
+        box-sizing: border-box;
+        width: 44px;
+        height: 44px;
+        background-color: rgb(255, 255, 255);
+        position: fixed;
+        pointer-events: none;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        mix-blend-mode: difference;
+        transform: translate(-44%, -40%);
+        -webkit-transform: translate(-44%, -40%);
+        -moz-transform: translate(-44%, -40%);
+        -ms-transform: translate(-44%, -40%);
+        -o-transform: translate(-44%, -40%);
+    }
+    .text_hero {
+        &:hover {
+            background-color: darkcyan;
+        }
+        &:hover~.cursor {
+            background-color: rgb(0, 200, 200);
+            height: 100px;
+            width: 100px;
+        }
+    }
+    .text_hero2 {
+        background-color: aliceblue;
+    }
+    .hero {
+        width: 4rem;
+        height: 4rem;
+        color: black;
+        // background-color: rgb(105, 105, 105);
+        border: 2.8px solid;
+        border-color: rgb(0, 0, 0);
+        border-radius: 10%;
+        -webkit-border-radius: 10%;
+        -moz-border-radius: 10%;
+        -ms-border-radius: 10%;
+        -o-border-radius: 10%;
+        &:hover {
+            border-color: rgb(158, 158, 158);
+        }
+    }
+}
+
+.special_color {
+    color: rgb(255, 18, 223);
 }
 
 ///////////////////// Navbar
