--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
   box-shadow: none;
 }
@@ -51,14 +51,9 @@
   -o-transform: translate(-44%, -40%);
 }
 
-.Hero_Section .text_hero:hover {
-  background-color: darkcyan;
-}
-
 .Hero_Section .text_hero:hover ~ .cursor {
-  background-color: #00c8c8;
-  height: 100px;
-  width: 100px;
+  height: 120px;
+  width: 120px;
 }
 
 .Hero_Section .text_hero2 {
@@ -68,22 +63,25 @@
 .Hero_Section .hero {
   width: 4rem;
   height: 4rem;
-  color: black;
-  border: 2.8px solid;
-  border-color: black;
-  border-radius: 10%;
-  -webkit-border-radius: 10%;
-  -moz-border-radius: 10%;
-  -ms-border-radius: 10%;
-  -o-border-radius: 10%;
+  background-color: #a1a1a1;
+  transform: scaleX(1);
 }
 
 .Hero_Section .hero:hover {
-  border-color: #9e9e9e;
+  transform: scaleX(2);
+}
+
+.Hero_Section .programming {
+  border-bottom: solid 4px #ff12df;
 }
 
 .special_color {
   color: #ff12df;
+}
+
+.footer {
+  border-top: 3px solid black;
+  width: 100%;
 }
 
 .conn {
