--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,7 +101,8 @@ $font: 1.36rem;
 .special_color {
     color: rgb(255, 18, 223);
 }
-.footer {border-top: 3px solid black;
+.footer {
+    border-top: 3px solid black;
     width: 100%;
 }
 
