--- a/src/shopping/share/navbar_App_shop.module.scss
+++ b/src/shopping/share/navbar_App_shop.module.scss
@@ -1,16 +1,16 @@
 .navbar_app_shop {
     // margin-bottom: 20px;
-    width: 100%;
-    top: 0%;
-    position: sticky;
-    padding-top: 10px;
-    // border-top: 2px solid rgb(174, 0, 166);
-    justify-content: space-around;
-    display: flex;
+    // width: 100%;
+    // top: 0%;
+    // position: sticky;
+    // padding-top: 10px;
+    // // border-top: 2px solid rgb(174, 0, 166);
+    // justify-content: space-around;
+    // display: flex;
     background: rgb(98, 237, 200);
     background: linear-gradient(90deg, rgba(98, 237, 200, 1) 0%, rgba(90, 158, 240, 1) 39%, rgba(24, 81, 143, 1) 100%);
-    .link {
-        text-decoration: none;
-        color: aliceblue;
-    }
+    // .link {
+    //     text-decoration: none;
+    //     color: aliceblue;
+    // }
 }
