--- a/src/shopping/App_shop.css
+++ b/src/shopping/App_shop.css
@@ -7,20 +7,42 @@
   box-shadow: none;
 }
 
-.navbar_app_shop {
-  background: #62edc8;
-  background: linear-gradient(90deg, #62edc8 0%, #5a9ef0 39%, #18518f 100%);
-}
-
-.container_store .bild img {
+.container_store img {
   width: 100%;
   height: 300px;
 }
 
-.shop .rgt {
-  flex: 1;
+.btn {
+  color: purple;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 2px solid purple;
+  padding: 10px 20px;
+  font-size: 17px;
+  font-weight: bold;
+  background: transparent;
+  position: relative;
+  transition: all 1s;
+  overflow: hidden;
 }
 
-.shop .lft {
-  flex: 2;
+.btn:hover {
+  color: white;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  top: 0;
+  left: -40px;
+  transform: skewX(45deg);
+  background-color: purple;
+  z-index: -1;
+  transition: all 1s;
+}
+
+.btn:hover::before {
+  width: 160%;
 }
