--- a/src/shopping/App_shop.css
+++ b/src/shopping/App_shop.css
@@ -17,7 +17,6 @@
   text-transform: uppercase;
   text-decoration: none;
   border: 2px solid purple;
-  padding: 10px 20px;
   font-size: 17px;
   font-weight: bold;
   background: transparent;
@@ -43,6 +42,7 @@
   transition: all 1s;
 }
 
-.btn:hover::before {
+.btn:hover::after {
   width: 160%;
+  height: 100%;
 }
