--- a/src/shopping/App_shop.scss
+++ b/src/shopping/App_shop.scss
@@ -34,7 +34,7 @@
     text-transform: uppercase;
     text-decoration: none;
     border: 2px solid purple;
-    padding: 10px 20px;
+    // padding: 10px 20px;
     font-size: 17px;
     font-weight: bold;
     background: transparent;
@@ -60,6 +60,7 @@
     transition: all 1s;
 }
 
-.btn:hover::before {
+.btn:hover::after {
     width: 160%;
+    height: 100%;
 }
