--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 * {
+    padding: 0%;
+    margin: 0%;
     // font-family: 'IBM Plex Sans', sans-serif;
     font-family: "Poppins", sans-serif;
     // font-weight: 400;
@@ -9,6 +11,8 @@
     box-shadow: none;
     // scroll-behavior: smooth;
     // scroll-padding-top: 75px;
+    // width: 100%;
+    // height: 100%;
 }
 
 // @font-face {
